--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(quartz)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-add_library(quartz quartz/Quartz.cpp)
+include(quartz-config.cmake)
+
+add_library(quartz SHARED
+  source/Quartz.cpp
+)
+
+include_directories(
+  ${quartz_includes}
+)
